force-app/main/default/objects/Scheduled_Maintenance__c/Scheduled_Maintenance__c.object-meta.xml
<CustomObject>
    <label>Scheduled Maintenance</label>
    <nameField>
        <displayFormat>SCH-MNT-{000000000}</displayFormat>
        <label>Scheduled Maintenance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled Maintenances</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>