force-app/main/default/objects/Scheduled_Maintenance__c/fields/Alert_Buffer__c.field-meta.xml
<CustomField>
    <fullName>Alert_Buffer__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Days before Start Date/Time that the alert starts showing. Use Alert Buffer Hours to add hours.</inlineHelpText>
    <label>Alert Buffer</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>