force-app/main/default/objects/Scheduled_Maintenance__c/fields/Alert_Buffer_Hours__c.field-meta.xml
<CustomField>
    <fullName>Alert_Buffer_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Hours before Start Date/Time that the alert starts showing, added to Alert Buffer (days). For example, 2 shows it 2 hours early. Decimals are allowed: 0.5 is 30 minutes.</inlineHelpText>
    <label>Alert Buffer Hours</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>