force-app/main/default/objects/Scheduled_Maintenance__c/fields/Alert_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Alert_Frequency__c</fullName>
    <inlineHelpText>How often a dismissed alert is shown again. Every Visit: on the next page load. Daily: on the next calendar day in the user&apos;s time zone. Weekly: 7 days after it was dismissed.</inlineHelpText>
    <label>Alert Frequency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Every Visit</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>