force-app/main/default/objects/Scheduled_Maintenance__c/fields/Applicable_Apps__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Apps__c</fullName>
    <label>Applicable Apps</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>PSA</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>SVC</fullName>
            </value>
            <value>
                <fullName>INV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>