force-app/main/default/objects/Scheduled_Maintenance__c/fields/Dismissible__c.field-meta.xml
<CustomField>
    <fullName>Dismissible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dismissible</label>
    <type>Checkbox</type>
</CustomField>