force-app/main/default/objects/Scheduled_Maintenance__c/fields/Start_Date_with_Buffer__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_with_Buffer__c</fullName>
    <formula>Start_Date_Time__c - Alert_Buffer__c - Alert_Buffer_Hours__c / 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date with Buffer</label>
    <type>DateTime</type>
</CustomField>