force-app/main/default/objects/Scheduled_Maintenance__c/validationRules/Alert_Buffer_Not_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Alert_Buffer_Not_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>Alert_Buffer__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Alert_Buffer__c</errorDisplayField>
    <errorMessage>Alert Buffer can&apos;t be negative.</errorMessage>
</ValidationRule>