force-app/main/default/objects/Scheduled_Maintenance__c/validationRules/End_After_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>End_After_Start</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date_Time__c &lt;= Start_Date_Time__c</errorConditionFormula>
    <errorDisplayField>End_Date_Time__c</errorDisplayField>
    <errorMessage>End Date/Time must be after Start Date/Time.</errorMessage>
</ValidationRule>