force-app/main/default/objects/Scheduled_Maintenance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Subject__c</columns>
    <columns>Applicable_Apps__c</columns>
    <columns>Alert_Frequency__c</columns>
    <columns>Alert_Buffer__c</columns>
    <columns>Start_Date_Time__c</columns>
    <columns>End_Date_Time__c</columns>
    <columns>Dismissible__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>